css adjustment to fix problems in dark mode

--- a/source/css/common.css
+++ b/source/css/common.css
@@ -4,6 +4,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #ffffff;
+    /* Dark background */
+    /* Light text */
 }
 
 html {
