--- a/source/css/index.css
+++ b/source/css/index.css
@@ -12,6 +12,8 @@
     .avatar {
         width: 40%;
         border-radius: 50%;
+        border: 2px solid #333;
+        /* Add border to avatar */
     }
 
     .nav-bar {
@@ -25,6 +27,8 @@
         font-size: 20px;
         font-weight: bold;
         text-decoration: underline;
+        color: #1E90FF;
+        /* Link color */
     }
 
     .article-preview {
